--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hendrikprinsza/basic-tts-player",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Text to speech to speaker",
   "main": "index.js",
   "repository": {
@@ -26,8 +26,8 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "google-tts-api": "0.0.2",
-    "node-wget": "^0.4.2",
-    "play-sound": "^1.1.1"
+    "google-tts-api": ">=0.0.2",
+    "node-wget": ">=0.4.2",
+    "play-sound": ">=1.1.1"
   }
 }
